Jupyter Notebooks/YAML files/Basic-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eclwatch
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: eclwatch
            port:
              number: 8010
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eclwatch
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  rules:
  - http:
      paths:
      - path:
        pathType: Prefix
        backend:
          service:
            name: eclwatch
            port: 
              number: 8010
        path: /static(/|$)(.*)
