Jupyter Notebooks/YAML files/eclwatch-ingres-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eclwatch-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - ecl-ingress.eastus.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: ecl-ingress.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: eclwatch
            port:
              number: 8010
