Jupyter Notebooks/YAML files/ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # name of this ingress rule
  name: eclwatch-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # Specifiying type of authentication: basic 
    nginx.ingress.kubernetes.io/auth-type: basic 
    # name of secret that contains user/passwd definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth 
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: "Authetnication required" 
spec:
  rules:
  -  http:
      paths:
      - path: /
        pathType: Prefix
        # specify the service the request should be forwarded to
        backend:
         service:
           name: eclwatch 
           port:
             number: 8010
